Fixed chart spacing issues.

--- a/src/client/app/watchlist/content/chart/chart.component.scss
+++ b/src/client/app/watchlist/content/chart/chart.component.scss
@@ -12,6 +12,7 @@
 
     .mp-container {
       position: relative;
+      height: 100%;
     }
 
     .mdl-tabs__tab-bar {
