--- a/src/client/app/watchlist/content/chart/d3fc/d3fc.component.scss
+++ b/src/client/app/watchlist/content/chart/d3fc/d3fc.component.scss
@@ -2,8 +2,8 @@ $blue: #1A9AF9;
 $gray: #444;
 
 .mp-chart {
-  width: calc(100% - 40px);
-  height: 100%;
+  width: calc(100% - 62px);
+  height: calc(100% - 30px);
   overflow: visible !important;
 
   svg {
